inserindo meus projetos

--- a/src/componentes/main/Main.css
+++ b/src/componentes/main/Main.css
@@ -42,7 +42,7 @@ color: #292949;
 .barra-pesquisa{
     height: 30px;
     border: 1 px solid #4d4848;
-    width: 300px;
+    width: 450px;
 }
 
 .barra-pesquisa:focus-visible{
@@ -50,4 +50,7 @@ color: #292949;
 }
 .pesquisa{
     padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
