--- a/src/componentes/projeto/Projeto.css
+++ b/src/componentes/projeto/Projeto.css
@@ -6,10 +6,11 @@
     overflow: hidden;
 }
 
-.projeto-filme>img{
+.foto-projeto>img{
     width: 100%;
+    height: auto;
 }
-.projeto-filme{
+.foto-projeto{
     min-height: 350px;
     display: flex;
     align-items: center;
@@ -21,4 +22,5 @@
 
 .projeto_content h1{
     text-align: center;
+    padding: 10px;
 }
